# apps/onboarding-ms/src/main/docs/openapi.yaml
@@ -16,7 +16,7 @@ tags:
 - name: internal-v1
 - name: support
 paths:
-  /v1/aggregates/verification/appio:
+  /v1/aggregates/verification/prod-io:
     post:
       tags:
       - Aggregates Controller
@@ -40,7 +40,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/VerifyAggregateResponse"
-  /v1/aggregates/verification/pagopa:
+        "401":
+          description: Not Authorized
+        "403":
+          description: Not Allowed
+      security:
+      - SecurityScheme: []
+  /v1/aggregates/verification/prod-pagopa:
     post:
       tags:
       - Aggregates Controller
@@ -64,7 +70,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/VerifyAggregateResponse"
-  /v1/aggregates/verification/send:
+        "401":
+          description: Not Authorized
+        "403":
+          description: Not Allowed
+      security:
+      - SecurityScheme: []
+  /v1/aggregates/verification/prod-pn:
     post:
       tags:
       - Aggregates Controller
@@ -87,7 +99,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/VerifyAggregateResponse"
+                $ref: "#/components/schemas/VerifyAggregateSendResponse"
+        "401":
+          description: Not Authorized
+        "403":
+          description: Not Allowed
+      security:
+      - SecurityScheme: []
   /v1/notification/resend:
     post:
       tags:
@@ -956,6 +974,46 @@ components:
           type: string
         origin:
           $ref: "#/components/schemas/Origin"
+    AggregateSend:
+      type: object
+      properties:
+        description:
+          type: string
+        pec:
+          type: string
+        taxCode:
+          type: string
+        vatNumber:
+          type: string
+        codeSDI:
+          type: string
+        address:
+          type: string
+        city:
+          type: string
+        province:
+          type: string
+        subunitType:
+          type: string
+        subunitCode:
+          type: string
+        users:
+          type: array
+          items:
+            $ref: "#/components/schemas/AggregateUser"
+    AggregateUser:
+      type: object
+      properties:
+        name:
+          type: string
+        surname:
+          type: string
+        taxCode:
+          type: string
+        email:
+          type: string
+        role:
+          type: string
     BillingPaRequest:
       type: object
       properties:
@@ -1727,6 +1785,17 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Institution"
+        errors:
+          type: array
+          items:
+            $ref: "#/components/schemas/RowError"
+    VerifyAggregateSendResponse:
+      type: object
+      properties:
+        aggregates:
+          type: array
+          items:
+            $ref: "#/components/schemas/AggregateSend"
         errors:
           type: array
           items:
