# apps/onboarding-ms/src/main/java/it/pagopa/selfcare/onboarding/controller/AggregatesController.java
@@ -3,6 +3,7 @@ package it.pagopa.selfcare.onboarding.controller;
 import io.quarkus.security.Authenticated;
 import io.smallrye.mutiny.Uni;
 import it.pagopa.selfcare.onboarding.model.VerifyAggregateResponse;
+import it.pagopa.selfcare.onboarding.model.VerifyAggregateSendResponse;
 import it.pagopa.selfcare.onboarding.service.AggregatesService;
 import jakarta.inject.Inject;
 import jakarta.validation.constraints.NotNull;
@@ -39,7 +40,7 @@ public class AggregatesController {
     @Path("/verification/prod-pn")
     @Produces(MediaType.APPLICATION_JSON)
     @Consumes(MediaType.MULTIPART_FORM_DATA)
-    public Uni<VerifyAggregateResponse> verifySendAggregatesCsv(@NotNull @RestForm("aggregates") File file){
+    public Uni<VerifyAggregateSendResponse> verifySendAggregatesCsv(@NotNull @RestForm("aggregates") File file){
 
         return aggregatesService.validateSendAggregatesCsv(file);
     }
